libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/fn-params-type.jsonc
//@ run: fail
//@ description: fn/4 struct params with type annotations should fail to compile
[
  "::kernel::special_form::fn",
  { "#struct": {} },
  {
    "#struct": {},
    "#type": "Int"
    //~^ ERROR type annotation is not allowed on the parameter list
  },
  "_",
  ["+", "a", "b"]
]
